# simple_shooting

./: .gitignore  CMakeLists.txt  CMakePresets.json  bonus_object.h  bullet.cpp  bullet.h  game_stage.cpp  game_stage.h  main.cpp  main_menu.cpp  main_menu.h  mushroom_enemy.h  object.cpp  object.h  plane.cpp  plane.h  render_context.cpp  render_context.h  script.lua  spore.h  stage.cpp  stage.h  text_object.cpp  text_object.h  ttf_data.h
